demo/demo-vaadin-webflux/src/main/java/com/example/demo/infra/ui/menus/errors/rpcTimeouts/BrokenSearchForm.java
package com.example.demo.infra.ui.menus.errors.rpcTimeouts;

import lombok.Getter;
import lombok.Setter;

@Getter
@Setter
public class BrokenSearchForm {

  String text;
}
